syntax = "proto3";

package example.user.v1;

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}


message CreateUserRequest {
  string name = 1;
}

message CreateUserResponse {
  string id = 1;
  string name = 2;
}
